# ComfyUI-CNtranslator

./: README.md  __init__.py  pyproject.toml  translator.py
.github/workflows/: publish.yml
